--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
                             <tr><td>Service Desk</td><td><span class="badge badge-active">Active</span></td><td>Standard Response</td></tr>
                             <tr><td>Cyber Security</td><td><span class="badge badge-active">Active</span></td><td>Threat Monitoring On</td></tr>
                             <tr><td>Microsoft 365</td><td><span class="badge badge-active">Active</span></td><td>Business Premium</td></tr>
+                           <tr><td>Microsoft 365</td><td><span >Not Active</span></td><td>Business Premium</td></tr>
                         </tbody>
                     </table>
                 </div>
